Fix spacing in blog

--- a/src/templates/BlogTemplate/styles.module.scss
+++ b/src/templates/BlogTemplate/styles.module.scss
@@ -25,36 +25,6 @@
     }
   }
 
-  .title {
-    margin-bottom: 10px;
-    padding: 0 20px;
-    line-height: 2.5rem;
-
-    @include respond-below(sm) {
-      margin-bottom: 0px;
-    }
-  }
-  .description {
-    padding: 10px 20px;
-    font-size: 1rem;
-    line-height: 1.8rem;
-    opacity: 0.7;
-  }
-
-  .cover {
-    height: 500px;
-    margin: 20px 20px;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px #373a661e;
-
-    @include respond-below(sm) {
-      height: 250px;
-    }
-  }
-
-  .blogContents {
-    padding: 20px;
-  }
 
   p {
     margin: 5px 0 20px 0;
@@ -80,6 +50,38 @@
       background-color: #092cf12c;
       border-left: 3px solid #0b0feb;
       font-style: italic;
+  }
+
+  .title {
+    margin-bottom: 10px;
+    padding: 0 20px;
+    line-height: 2.5rem;
+
+    @include respond-below(sm) {
+      margin-bottom: 0px;
+    }
+  }
+  .description {
+    padding: 10px 20px;
+    font-size: 1rem;
+    line-height: 1.8rem;
+    margin: 0;
+    opacity: 0.7;
+  }
+
+  .cover {
+    height: 500px;
+    margin: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px #373a661e;
+
+    @include respond-below(sm) {
+      height: 250px;
+    }
+  }
+
+  .blogContents {
+    padding: 20px;
   }
 
 }
